src/ffi/ps2000a/ps2000a.rs

extern "C" {
    pub fn ps2000aGetValues(handle: i16, startIndex: u32,
                            noOfSamples: *mut u32, downSampleRatio: u32,
                            downSampleRatioMode: PS2000A_RATIO_MODE,
                            segmentIndex: u32, overflow: *mut i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesBulk(handle: i16, noOfSamples: *mut u32,
                                fromSegmentIndex: u32, toSegmentIndex: u32,
                                downSampleRatio: u32,
                                downSampleRatioMode: PS2000A_RATIO_MODE,
                                overflow: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesAsync(handle: i16, startIndex: u32,
                                 noOfSamples: u32, downSampleRatio: u32,
                                 downSampleRatioMode: PS2000A_RATIO_MODE,
                                 segmentIndex: u32,
                                 lpDataReady: *mut ::std::os::raw::c_void,
                                 pParameter: *mut ::std::os::raw::c_void)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesOverlapped(handle: i16, startIndex: u32,
                                      noOfSamples: *mut u32,
                                      downSampleRatio: u32,
                                      downSampleRatioMode: PS2000A_RATIO_MODE,
                                      segmentIndex: u32, overflow: *mut i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesOverlappedBulk(handle: i16, startIndex: u32,
                                          noOfSamples: *mut u32,
                                          downSampleRatio: u32,
                                          downSampleRatioMode:
                                              PS2000A_RATIO_MODE,
                                          fromSegmentIndex: u32,
                                          toSegmentIndex: u32,
                                          overflow: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aStop(handle: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aHoldOff(handle: i16, holdoff: u64,
                          type_: PS2000A_HOLDOFF_TYPE) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetChannelInformation(handle: i16,
                                        info: PS2000A_CHANNEL_INFO,
                                        probe: i32, ranges: *mut i32,
                                        length: *mut i32, channels: i32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aEnumerateUnits(count: *mut i16, serials: *mut i8,
                                 serialLth: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aPingUnit(handle: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aMaximumValue(handle: i16, value: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aMinimumValue(handle: i16, value: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetAnalogueOffset(handle: i16, range: PS2000A_RANGE,
                                    coupling: PS2000A_COUPLING,
                                    maximumVoltage: *mut f32,
                                    minimumVoltage: *mut f32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetMaxSegments(handle: i16, maxSegments: *mut u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aQueryOutputEdgeDetect(handle: i16, state: *mut i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetOutputEdgeDetect(handle: i16, state: i16) -> PICO_STATUS;
}
